--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libnvram"]
 	path = libnvram
-	url = ssh://git@bitbucket.datarespons.com:7999/oe-bsp/libnvram.git
+	url = https://mbucket.datarespons.com/scm/oe-bsp/libnvram.git
