--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libnvram"]
 	path = libnvram
-	url = https://mbucket.datarespons.com/scm/oe-bsp/libnvram.git
+	url = git@github.com:data-respons-solutions/libnvram.git
