--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libnvram"]
 	path = libnvram
-	url = git@github.com:data-respons-solutions/libnvram.git
+	url = ssh://git@github.com/data-respons-solutions/libnvram.git
